Fixed the css selector for selecting active main menu items. Now indirect active links in the top level of the main menu get a visible active status.

--- a/assets/css/typography.scss
+++ b/assets/css/typography.scss
@@ -134,7 +134,12 @@ div > p.lead + * {
   color: $dark;
 }
 
-.navbar-nav > .nav-item > .nuxt-link-exact-active {
+.navbar-nav > div > li.nav-item > a.nav-link {
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
+}
+
+.navbar-nav > div > li.nav-item > a.nav-link.nuxt-link-active {
   border-bottom: 2px solid pink;
   font-weight: 500;
 }
